@@ -254,9 +254,10 @@ AC_ARG_WITH(
     AC_MSG_RESULT($mysql_includepath)
   ]
 )
-
 mysql_includes="-I$mysql_includepath"
+fi
 
+if test "$enable_mysql" = "yes"; then
 AC_ARG_WITH(
   mysql-libraries,
   [  --with-mysql-libraries=DIR 
@@ -275,14 +276,14 @@ AC_ARG_WITH(
     AC_MSG_RESULT($mysql_libpath)
   ]
 )
-
 mysql_libs="$socket_lib $nsl_lib $crypt_lib -lvanessa_logger -lvanessa_adt -lz -lm -L$mysql_libpath -lmysqlclient"
+fi
 
+if test "$enable_mysql" = "yes"; then
 AC_CHECK_FILE(
-  $mysql_includepath/mysql.h,
-  [ mysql_build_dir="mysql" ],
+  $mysql_includepath/mysql.h, ,
   [ 
-    mysql_build_dir="" 
+    enable_mysq="no" 
 AC_MSG_WARN(
 ""
 "**********************************************************************"
@@ -292,14 +293,15 @@ AC_MSG_WARN(
     sleep 5
   ]
 )
+fi
 
-if [ test -n "$mysql_build_dir" ]; then
+if test "$enable_mysql" = "yes"; then
 AC_CHECK_LIB(
   mysqlclient,
   mysql_real_connect,
-  [ mysql_build_dir="mysql" ],
+  ,
   [ 
-    mysql_build_dir="" 
+    enable_mysql="no" 
 AC_MSG_WARN(
 ""
 "**********************************************************************"
@@ -311,12 +313,8 @@ AC_MSG_WARN(
   $mysql_libs
 )
 fi
-fi
 
-if test "$mysql_build_dir" != "mysql"; then
-mysql_lib=""
-mysql_includes=""
-fi
+AM_CONDITIONAL(MYSQL_BUILD, test "${enable_mysql}" = "yes")
 
 
 ######################################################################
@@ -340,9 +338,6 @@ AC_ARG_ENABLE(
 )
 
 if test "$enable_odbc" = "yes"; then
-
-odbc_build_dir="odbc"
-
 AC_ARG_WITH(
   odbc-includes,
   [  --with-odbc-includes=DIR  
@@ -360,9 +355,10 @@ AC_ARG_WITH(
     AC_MSG_RESULT($odbc_includepath)
   ]
 )
-
 odbc_includes="-I$odbc_includepath"
+fi
 
+if test "$enable_odbc" = "yes"; then
 AC_ARG_WITH(
   odbc-libraries,
   [  --with-odbc-libraries=DIR 
@@ -380,26 +376,22 @@ AC_ARG_WITH(
     AC_MSG_RESULT($odbc_libpath)
   ]
 )
-
 odbc_libs="$socket_lib $nsl_lib $crypt_lib -lvanessa_logger -lvanessa_adt -lz -lm -L$odbc_libpath -lodbc"
+fi
 
+if test "$enable_odbc" = "yes"; then
 AC_CHECK_FILES(
   $odbc_includepath/sql.h $odbc_includepath/sqlext.h $odbc_includepath/sqltypes.h,
   AC_DEFINE(WITH_UNIX_ODBC, 1, Use unixodbc ODBC Manager),
-  odbc_build_dir="" 
-)
-
-if test -n "$odbc_build_dir"; then
-AC_CHECK_LIB(
-  odbc,
-  SQLSetEnvAttr,
-  :, 
-  [ odbc_build_dir="" ],
-  $odbc_libs
+  enable_odbc="no" 
 )
 fi
 
-if test -z "$odbc_build_dir"; then
+if test "$enable_odbc" = "yes"; then
+	AC_CHECK_LIB(odbc, SQLSetEnvAttr, , [ enable_odbc="yes" ], $odbc_libs)
+fi
+
+if test "$enable_odbc" != "yes"; then
 AC_MSG_WARN(
 ""
 "**********************************************************************"
@@ -410,12 +402,9 @@ AC_MSG_WARN(
 ) ;\
     sleep 5
 fi
-fi
 
-if test "$odbc_build_dir" = "odbc"; then
-odbc_lib=""
-odbc_includes=""
-fi
+AM_CONDITIONAL(ODBC_BUILD, test "${enable_odbc}" = "yes")
+
 
 ######################################################################
 # PostgreSQL
@@ -456,9 +445,10 @@ AC_ARG_WITH(
     AC_MSG_RESULT($pg_includepath)
   ]
 )
-
 pg_includes="-I$pg_includepath"
+fi
 
+if test "$enable_pg" = "yes"; then
 AC_ARG_WITH(
   pg-libraries,
   [  --with-pg-libraries=DIR PostgreSQL library files are in DIR.  ],
@@ -478,14 +468,14 @@ AC_ARG_WITH(
     AC_MSG_RESULT($pg_libpath)
   ]
 )
-
 pg_libs="$socket_lib $nsl_lib $crypt_lib $ssl_lib -lvanessa_logger -lvanessa_adt -L$pg_libpath -lpq"
+fi
 
+if test "$enable_pg" = "yes"; then
 AC_CHECK_FILE(
-  $pg_includepath/libpq-fe.h,
-  [ pg_build_dir="postgresql" ],
+  $pg_includepath/libpq-fe.h, ,
   [ 
-    pg_build_dir="" 
+    enable_pg="no" 
 AC_MSG_WARN(
 ""
 "**********************************************************************"
@@ -495,14 +485,14 @@ AC_MSG_WARN(
     sleep 5
   ]
 )
+fi
 
-if [ test -n "$pg_build_dir" ]; then
+if test "$enable_pg" = "yes"; then
 AC_CHECK_LIB(
   pq,
-  PQstatus,
-  [ pg_build_dir="postgresql" ],
+  PQstatus, ,
   [ 
-    postgresql_build_dir="" 
+    enable_pg="no" 
 AC_MSG_WARN(
 ""
 "**********************************************************************"
@@ -514,12 +504,8 @@ AC_MSG_WARN(
   $pg_libs
 )
 fi
-fi
 
-if test "$pg_build_dir" != "postgresql"; then
-pg_lib=""
-pg_includes=""
-fi
+AM_CONDITIONAL(PG_BUILD, test "${enable_pg}" = "yes")
 
 
 ######################################################################
@@ -544,14 +530,9 @@ AC_ARG_ENABLE(
 
 if test "$enable_gdbm" = "yes"; then
 AC_CHECK_HEADERS(
-  gdbm.h,
-  [ 
-    gdbm_build_dir="gdbm" 
-    makegdbm_build_dir="makegdbm" 
-  ],
+  gdbm.h, ,
   [
-    gdbm_build_dir="" 
-    makegdbm_build_dir="" 
+    enable_gdbm="no",
     AC_MSG_WARN(
 ""
 "**********************************************************************"
@@ -561,19 +542,14 @@ AC_CHECK_HEADERS(
     sleep 5
   ]
 )
+fi
 
-if [ test -n "$gdbm_build_dir" ]; then
+if test "$enable_gdbm" = "yes"; then
 AC_CHECK_LIB(
-  gdbm,
-  gdbm_fetch,
+  gdbm, gdbm_fetch, ,
   [ 
-    gdbm_build_dir="gdbm" 
-    makegdbm_build_dir="makegdbm" 
-  ],
-  [ 
-    gdbm_build_dir="" 
-    makegdbm_build_dir="" 
-AC_MSG_WARN(
+    enable_gdbm="no",
+    AC_MSG_WARN(
 ""
 "**********************************************************************"
 "* perditiondb_gdbm and makegdbm will not be built"
@@ -583,7 +559,8 @@ AC_MSG_WARN(
   ]
 )
 fi
-fi
+
+AM_CONDITIONAL(GDBM_BUILD, test "${enable_gdbm}" = "yes")
 
 
 ######################################################################
@@ -609,14 +586,9 @@ AC_ARG_ENABLE(
 
 if test "$enable_bdb" = "yes"; then
 AC_CHECK_HEADERS(
-  db.h,
-  [ 
-    bdb_build_dir="bdb" 
-    makebdb_build_dir="makebdb" 
-  ],
+  db.h, ,
   [
-    bdb_build_dir="" 
-    makebdb_build_dir="" 
+    enable_bdb="no" 
     AC_MSG_WARN(
 ""
 "**********************************************************************"
@@ -626,20 +598,16 @@ AC_CHECK_HEADERS(
     sleep 5
   ]
 )
+fi
 
 # Removed because different versions of libdb.a actually
 # have different symbols. Pitty you can't legistlate against stupidity.
-#if [ test -n "$bdb_build_dir" ]; then
+#if test "$enable_bdb" = "yes"; then
 #AC_CHECK_LIB(
 #  db,
-#  db_create,
+#  db_create, ,
 #  [ 
-#    bdb_build_dir="bdb" 
-#    makebdb_build_dir="makebdb" 
-#  ],
-#  [ 
-#    bdb_build_dir="" 
-#    makebdb_build_dir="" 
+#    enable_bdb="no"
 #AC_MSG_WARN(
 #""
 #"**********************************************************************"
@@ -651,20 +619,22 @@ AC_CHECK_HEADERS(
 #)
 #fi
 
+AM_CONDITIONAL(BDB_BUILD, test "${enable_bdb}" = "yes")
+
 # More BDB Stupidity.
 # It seems that function call arguments actually vary between versions.
 # Why do we use this crap anyway?
 
-AC_MSG_CHECKING("For Berkley DB Version 4.1 and above");
-AC_TRY_RUN(
-	[ #include <db.h>
-	  int main(int arc, char **argv) { 
-	  exit((DB_VERSION_MAJOR>=4 && DB_VERSION_MINOR>=1)?0:1);} ],
-        [ AC_DEFINE(HAVE_BDB_4_1, 1, Berkely DB Version 4.1 and above)
-          AC_MSG_RESULT("yes") ],
-        [ AC_MSG_RESULT("no") ]
-)
-
+if test "$enable_bdb" = "yes"; then
+	AC_MSG_CHECKING("For Berkley DB Version 4.1 and above");
+	AC_TRY_RUN(
+		[ #include <db.h>
+	  	int main(int arc, char **argv) { 
+	  	exit((DB_VERSION_MAJOR>=4 && DB_VERSION_MINOR>=1)?0:1);} ],
+        	[ AC_DEFINE(HAVE_BDB_4_1, 1, Berkely DB Version 4.1 and above)
+          	AC_MSG_RESULT("yes") ],
+        	[ AC_MSG_RESULT("no") ]
+	)
 fi
 
 
@@ -688,9 +658,7 @@ AC_ARG_ENABLE(
   ]
 )
 
-if test "$enable_nis" = "yes"; then
-    nis_build_dir="nis" 
-fi
+AM_CONDITIONAL(NIS_BUILD, test "${enable_nis}" = "yes")
 
 
 ######################################################################
@@ -713,9 +681,7 @@ AC_ARG_ENABLE(
   ]
 )
 
-if test "$enable_posix_regex" = "yes"; then
-    posix_regex_build_dir="posix_regex" 
-fi
+AM_CONDITIONAL(POSIX_REGEX_BUILD, test "${enable_posix_regex}" = "yes")
 
 
 ######################################################################
@@ -739,15 +705,13 @@ AC_ARG_ENABLE(
 )
 
 if test "$enable_ldap" = "yes"; then
-ldap_build_dir="ldap";
-
 AC_ARG_WITH(
   ldap-includes,
   [  --with-ldap-includes=DIR  
                           Open LDAP include files are in DIR.  ],
   [ 
     if test "$withval" = "no"; then 
-     ldap_build_dir=""; 
+     enable_ldap="no"; 
     else
       ldap_includepath="$withval" 
     fi
@@ -764,17 +728,17 @@ AC_ARG_WITH(
     AC_MSG_RESULT($ldap_includepath)
   ]
 )
-
 ldap_includes="-I$ldap_includepath"
+fi
 
-if test "$ldap_build_dir" = "ldap"; then
+if test "$enable_ldap" = "yes"; then
 AC_ARG_WITH(
   ldap-libraries,
   [  --with-ldap-libraries=DIR 
                           Open LDAP library files are in DIR.  ],
   [ 
     if test "$withval" = "no"; then 
-     ldap_build_dir=""; 
+     enable_ldap="no"; 
     else
       ldap_libpath="$withval" 
     fi
@@ -792,29 +756,18 @@ AC_ARG_WITH(
     AC_MSG_RESULT($ldap_libpath)
   ]
 )
-fi
-
 ldap_libs="$socket_lib $nsl_lib $resolv_lib -L$ldap_libpath -lldap -llber"
-
-if test "$ldap_build_dir" = "ldap"; then
-AC_CHECK_FILE(
-  $ldap_includepath/ldap.h,
-  [ : ] ,
-  [ ldap_build_dir="" ]
-)
 fi
 
-if test "$ldap_build_dir" = "ldap"; then
-AC_CHECK_LIB(
-  ldap,
-  ldap_url_parse,
-  [ : ],
-  [ ldap_build_dir="" ],
-  $ldap_libs
-)
+if test "$enable_ldap" = "yes"; then
+	AC_CHECK_FILE($ldap_includepath/ldap.h, , [ enable_ldap="no" ])
 fi
 
-if test "$ldap_build_dir" = "ldap"; then
+if test "$enable_ldap" = "yes"; then
+	AC_CHECK_LIB(ldap, ldap_url_parse, , [ enable_ldap="no" ], $ldap_libs)
+fi
+
+if test "$enable_ldap" = "yes"; then
         AC_MSG_CHECKING(OpenLDAP lud_exts in LDAPURLDesc)
 	AC_TRY_COMPILE([#include <stdlib.h>
 			#include <lber.h>
@@ -835,7 +788,7 @@ AC_MSG_WARN(
 	)
 fi
 
-if test "$ldap_build_dir" = "ldap"; then
+if test "$enable_ldap" = "yes"; then
         AC_CHECK_LIB(ldap, ldap_set_option, 
 	AC_DEFINE(WITH_LDAP_SET_OPTION, 1, Compile with LDAP set_option),
 AC_MSG_WARN(
@@ -848,7 +801,7 @@ AC_MSG_WARN(
 ),)
 fi
 
-if test "$ldap_build_dir" = "ldap"; then
+if test "$enable_ldap" = "yes"; then
 AC_ARG_WITH(
   ldap-schema-directory,
   [  --with-ldap-schema-directory=DIR 
@@ -884,7 +837,7 @@ AC_MSG_WARN(
 )
 fi
 
-if test "$ldap_build_dir" != "ldap"; then
+if test "$enable_ldap" != "yes"; then
 AC_MSG_WARN(
 ""
 "**********************************************************************"
@@ -892,10 +845,9 @@ AC_MSG_WARN(
 "**********************************************************************"
 ) ;\
     sleep 5;
-    ldab_libs="";
-    ldap_includes="";
 fi
-fi
+
+AM_CONDITIONAL(LDAP_BUILD, test "${enable_ldap}" = "yes")
 
 
 ######################################################################
@@ -918,11 +870,7 @@ AC_ARG_ENABLE(
   ]
 )
 
-if test "$enable_daemon_map" = "yes"; then
-    daemon_map_build_dir="daemon" 
-else
-    daemon_map_build_dir="" 
-fi
+AM_CONDITIONAL(DEAMON_MAP_BUILD, test "${enable_daemon_map}" = "yes")
 
 
 ######################################################################
@@ -965,16 +913,14 @@ AC_MSG_WARN(
 )
 fi
 
-if test $pam = yes; then
+if test "$pam" = "yes"; then
   pam_lib="-lpam"
-  pam_source="pam.c pam.h"
-  pam_dir="pam.d"
   AC_DEFINE(WITH_PAM_SUPPORT, 1, Compile with PAM support)
 else
   pam_lib=""
-  pam_dir=""
-  pam_source=""
 fi
+
+AM_CONDITIONAL(PAM_BUILD, test "$pam" = "yes")
 
 
 posix_regex_libs="-lvanessa_logger -lvanessa_adt"
@@ -1029,10 +975,11 @@ AC_MSG_WARN(
 "* Latex not installed. LDAP documentation will not be built"
 "**********************************************************************"
 );
-	ldap_doc_dir=""
 else
-	ldap_doc_dir="doc"
+	ldap_doc_build="yes"
 fi
+
+AM_CONDITIONAL(LDAP_DOC_BUILD, test "${ldap_doc_build}" = "yes")
 
 
 ######################################################################
@@ -1128,36 +1075,22 @@ AC_TYPE_SIGNAL
 AC_FUNC_WAIT3
 AC_CHECK_FUNCS(select socket strdup strerror parse_printf_format flim)
 
-AC_SUBST(gdbm_build_dir)
-AC_SUBST(makegdbm_build_dir)
-AC_SUBST(bdb_build_dir)
-AC_SUBST(nis_build_dir)
-AC_SUBST(posix_regex_build_dir)
-AC_SUBST(makebdb_build_dir)
-AC_SUBST(pg_build_dir)
 AC_SUBST(pg_libs)
 AC_SUBST(pg_includes)
-AC_SUBST(odbc_build_dir)
 AC_SUBST(odbc_libs)
 AC_SUBST(odbc_includes)
-AC_SUBST(mysql_build_dir)
 AC_SUBST(mysql_libs)
 AC_SUBST(mysql_includes)
-AC_SUBST(ldap_build_dir)
 AC_SUBST(ldap_libs)
 AC_SUBST(ldap_includes)
 AC_SUBST(ldap_schemadir)
-AC_SUBST(daemon_map_build_dir)
 AC_SUBST(posix_regex_libs)
 AC_SUBST(socket_lib)
 AC_SUBST(dl_lib)
 AC_SUBST(nsl_lib)
 AC_SUBST(resolv_lib)
 AC_SUBST(crypt_lib)
-AC_SUBST(pam_dir)
 AC_SUBST(pam_lib)
-AC_SUBST(pam_source)
-AC_SUBST(ldap_doc_dir)
 AC_SUBST(dmalloc_lib)
 
 AC_OUTPUT(
