@@ -24,13 +24,41 @@
 #
 ######################################################################
 
+if GDBM_BUILD
+GDBM_DIR = gdbm
+endif
+if BDB_BUILD
+BDB_DIR = bdb
+endif
+if LDAP_BUILD
+LDAP_DIR = ldap
+endif
+if MYSQL_BUILD
+MYSQL_DIR = mysql
+endif
+if ODBC_BUILD
+ODBC_DIR = odbc
+endif
+if POSIX_REGEX_BUILD
+POSIX_REGEX_DIR = posix_regex
+endif
+if NIS_BUILD
+NIS_DIR = nis
+endif
+if PG_BUILD
+PG_DIR = postgresql
+endif
+if DEAMON_MAP_BUILD
+DEAMON_MAP_DIR = daemon
+endif
+
 SUBDIRS = \
-  @gdbm_build_dir@ \
-  @bdb_build_dir@ \
-  @ldap_build_dir@ \
-  @odbc_build_dir@ \
-  @mysql_build_dir@ \
-  @nis_build_dir@ \
-  @pg_build_dir@ \
-  @posix_regex_build_dir@ \
-  @daemon_map_build_dir@
+  $(GDBM_DIR) \
+  $(BDB_DIR) \
+  $(LDAP_DIR) \
+  $(MYSQL_DIR) \
+  $(ODBC_DIR) \
+  $(NIS_DIR) \
+  $(PG_DIR) \
+  $(POSIX_REGEX_DIR) \
+  $(DEAMON_MAP_DIR)
