@@ -9,6 +9,9 @@ XXX
 (Horms)
  * XXX
  - Added explicit domain option. Brendan O'Dea
+ - Make sure all source files are inculded in tar ball,
+   regardless of what parts of the code are excluded from the build
+   by configure.
 
 ----------------------------------------------------------------------
 
